corregido el path para todos los archivos ahora apunta a .\

--- a/src/zero2hero/zero2hero_0101.ipynb
+++ b/src/zero2hero/zero2hero_0101.ipynb
@@ -40,13 +40,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'d:/Onedrive/Austral/Cursos/08 - Laboratorio de Implementacion 1/labo2023v/src/zero2hero'"
+      ],
+      "text/latex": [
+       "'d:/Onedrive/Austral/Cursos/08 - Laboratorio de Implementacion 1/labo2023v/src/zero2hero'"
+      ],
+      "text/markdown": [
+       "'d:/Onedrive/Austral/Cursos/08 - Laboratorio de Implementacion 1/labo2023v/src/zero2hero'"
+      ],
+      "text/plain": [
+       "[1] \"d:/Onedrive/Austral/Cursos/08 - Laboratorio de Implementacion 1/labo2023v/src/zero2hero\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "setwd(\"X:\\\\gdrive\\\\austral2023v\\\\\")  #Establezco el Working Directory"
+    "setwd(\".\\\\\")  #Establezco el Working Directory \n",
+    "getwd() #Valido el directorio"
    ]
   },
   {
@@ -67,11 +90,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2023-04-07 16:05:29 CEST\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Sys.time()"
    ]
@@ -87,17 +123,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 34.6437\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- read.csv(\"./datasets/dataset_pequeno.csv\")\n",
     "t1  <- Sys.time()\n",
     "delta  <- as.numeric(  t1 - t0, units = \"secs\")  #calculo la diferencia de tiempos\n",
-    "print( delta) #imprimo"
+    "print(delta) #imprimo"
    ]
   },
   {
@@ -118,11 +165,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 27.62455\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- read.csv(\"./datasets/dataset_pequeno.csv\")\n",
@@ -153,22 +211,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'data.table' was built under R version 4.2.3\"\n"
+     ]
+    }
+   ],
    "source": [
     "library( \"data.table\")   #cargo la libreria  data.table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 1.080051\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- fread(\"./datasets/dataset_pequeno.csv\")\n",
@@ -193,11 +274,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 0.5243709\n"
+     ]
+    }
+   ],
    "source": [
     "t0  <- Sys.time()\n",
     "dataset <- fread(\"./datasets/dataset_pequeno.csv\")\n",
@@ -242,7 +334,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.2.2"
   }
  },
  "nbformat": 4,
