--- a/src/zero2hero/zero2hero_0105.ipynb
+++ b/src/zero2hero/zero2hero_0105.ipynb
@@ -25,11 +25,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 643858</td><td>34.4</td><td>1321401</td><td>70.6</td><td>1321401</td><td>70.6</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1150031</td><td> 8.8</td><td>8388608</td><td>64.0</td><td>1642884</td><td>12.6</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 × 6 of type dbl\n",
+       "\\begin{tabular}{r|llllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  643858 & 34.4 & 1321401 & 70.6 & 1321401 & 70.6\\\\\n",
+       "\tVcells & 1150031 &  8.8 & 8388608 & 64.0 & 1642884 & 12.6\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 × 6 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| Ncells |  643858 | 34.4 | 1321401 | 70.6 | 1321401 | 70.6 |\n",
+       "| Vcells | 1150031 |  8.8 | 8388608 | 64.0 | 1642884 | 12.6 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+       "Ncells  643858 34.4 1321401    70.6 1321401  70.6\n",
+       "Vcells 1150031  8.8 8388608    64.0 1642884  12.6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "rm( list=ls())\n",
     "gc()\n",
@@ -37,7 +83,7 @@
     "library( \"data.table\")   #cargo la libreria  data.table\n",
     "\n",
     "options(repr.plot.width=20, repr.plot.height=10) \n",
-    "setwd(\"X:\\\\gdrive\\\\austral2023v\\\\\")  #Aqui se debe poner la ruta de la PC local"
+    "setwd(\".\\\\\")  #Aqui se debe poner la ruta de la PC local"
    ]
   },
   {
@@ -51,9 +97,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -62,20 +111,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>107</li><li>228</li><li>351</li><li>468</li><li>579</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 107\n",
+       "\\item 228\n",
+       "\\item 351\n",
+       "\\item 468\n",
+       "\\item 579\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 107\n",
+       "2. 228\n",
+       "3. 351\n",
+       "4. 468\n",
+       "5. 579\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 107 228 351 468 579"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "vector_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -84,11 +175,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>107</li><li>228</li><li>351</li><li>468</li><li>579</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 107\n",
+       "\\item 228\n",
+       "\\item 351\n",
+       "\\item 468\n",
+       "\\item 579\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 107\n",
+       "2. 228\n",
+       "3. 351\n",
+       "4. 468\n",
+       "5. 579\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 107 228 351 468 579"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "vector_ids"
    ]
@@ -119,9 +249,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -138,11 +271,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 5 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>numero_de_cliente</th><th scope=col>Predicted</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>107</td><td>0</td></tr>\n",
+       "\t<tr><td>228</td><td>1</td></tr>\n",
+       "\t<tr><td>351</td><td>1</td></tr>\n",
+       "\t<tr><td>468</td><td>0</td></tr>\n",
+       "\t<tr><td>579</td><td>1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 5 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " numero\\_de\\_cliente & Predicted\\\\\n",
+       " <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 107 & 0\\\\\n",
+       "\t 228 & 1\\\\\n",
+       "\t 351 & 1\\\\\n",
+       "\t 468 & 0\\\\\n",
+       "\t 579 & 1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 5 × 2\n",
+       "\n",
+       "| numero_de_cliente &lt;dbl&gt; | Predicted &lt;dbl&gt; |\n",
+       "|---|---|\n",
+       "| 107 | 0 |\n",
+       "| 228 | 1 |\n",
+       "| 351 | 1 |\n",
+       "| 468 | 0 |\n",
+       "| 579 | 1 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  numero_de_cliente Predicted\n",
+       "1 107               0        \n",
+       "2 228               1        \n",
+       "3 351               1        \n",
+       "4 468               0        \n",
+       "5 579               1        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "tabla_final"
    ]
@@ -165,9 +358,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -203,7 +399,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.2.2"
   }
  },
  "nbformat": 4,
