--- a/src/zero2hero/zero2hero_0106.ipynb
+++ b/src/zero2hero/zero2hero_0106.ipynb
@@ -34,11 +34,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 614700</td><td>32.9</td><td>1321401</td><td>70.6</td><td>1321401</td><td>70.6</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1093594</td><td> 8.4</td><td>8388608</td><td>64.0</td><td>1632451</td><td>12.5</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 × 6 of type dbl\n",
+       "\\begin{tabular}{r|llllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  614700 & 32.9 & 1321401 & 70.6 & 1321401 & 70.6\\\\\n",
+       "\tVcells & 1093594 &  8.4 & 8388608 & 64.0 & 1632451 & 12.5\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 × 6 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| Ncells |  614700 | 32.9 | 1321401 | 70.6 | 1321401 | 70.6 |\n",
+       "| Vcells | 1093594 |  8.4 | 8388608 | 64.0 | 1632451 | 12.5 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+       "Ncells  614700 32.9 1321401    70.6 1321401  70.6\n",
+       "Vcells 1093594  8.4 8388608    64.0 1632451  12.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'data.table' was built under R version 4.2.3\"\n",
+      "Warning message:\n",
+      "\"package 'rpart' was built under R version 4.2.3\"\n",
+      "Warning message:\n",
+      "\"package 'rpart.plot' was built under R version 4.2.3\"\n"
+     ]
+    }
+   ],
    "source": [
     "rm( list=ls())\n",
     "gc()\n",
@@ -48,7 +106,7 @@
     "library( \"rpart.plot\")\n",
     "\n",
     "options(repr.plot.width=20, repr.plot.height=10) \n",
-    "setwd(\"X:\\\\gdrive\\\\austral2023v\\\\\")  #Aqui se debe poner la ruta de la PC local"
+    "setwd(\".\\\\\")  #Aqui se debe poner la ruta de la PC local"
    ]
   },
   {
@@ -60,9 +118,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -78,11 +139,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 4 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>foto_mes</th><th scope=col>clase_ternaria</th><th scope=col>N</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>202107</td><td>CONTINUA</td><td>162336</td></tr>\n",
+       "\t<tr><td>202107</td><td>BAJA+1  </td><td>  1078</td></tr>\n",
+       "\t<tr><td>202107</td><td>BAJA+2  </td><td>  1268</td></tr>\n",
+       "\t<tr><td>202109</td><td>        </td><td>165237</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 4 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " foto\\_mes & clase\\_ternaria & N\\\\\n",
+       " <int> & <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t 202107 & CONTINUA & 162336\\\\\n",
+       "\t 202107 & BAJA+1   &   1078\\\\\n",
+       "\t 202107 & BAJA+2   &   1268\\\\\n",
+       "\t 202109 &          & 165237\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 4 × 3\n",
+       "\n",
+       "| foto_mes &lt;int&gt; | clase_ternaria &lt;chr&gt; | N &lt;int&gt; |\n",
+       "|---|---|---|\n",
+       "| 202107 | CONTINUA | 162336 |\n",
+       "| 202107 | BAJA+1   |   1078 |\n",
+       "| 202107 | BAJA+2   |   1268 |\n",
+       "| 202109 | <!----> | 165237 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  foto_mes clase_ternaria N     \n",
+       "1 202107   CONTINUA       162336\n",
+       "2 202107   BAJA+1           1078\n",
+       "3 202107   BAJA+2           1268\n",
+       "4 202109                  165237"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "dataset[  , .N, list( foto_mes, clase_ternaria) ]"
    ]
@@ -96,9 +213,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -114,11 +234,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "165237"
+      ],
+      "text/latex": [
+       "165237"
+      ],
+      "text/markdown": [
+       "165237"
+      ],
+      "text/plain": [
+       "[1] 165237"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "nrow( dfuturo )"
    ]
@@ -132,9 +274,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -143,11 +288,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>31116053</li><li>31116803</li><li>31117730</li><li>31117908</li><li>31117977</li><li>31120119</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 31116053\n",
+       "\\item 31116803\n",
+       "\\item 31117730\n",
+       "\\item 31117908\n",
+       "\\item 31117977\n",
+       "\\item 31120119\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 31116053\n",
+       "2. 31116803\n",
+       "3. 31117730\n",
+       "4. 31117908\n",
+       "5. 31117977\n",
+       "6. 31120119\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 31116053 31116803 31117730 31117908 31117977 31120119"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "head( vector_ids)"
    ]
@@ -163,9 +349,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -174,22 +363,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li><li>1</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 1\n",
+       "\\item 1\n",
+       "\\item 1\n",
+       "\\item 1\n",
+       "\\item 1\n",
+       "\\item 1\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 1\n",
+       "2. 1\n",
+       "3. 1\n",
+       "4. 1\n",
+       "5. 1\n",
+       "6. 1\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 1 1 1 1 1 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "head( vector_enviar )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "165237"
+      ],
+      "text/latex": [
+       "165237"
+      ],
+      "text/markdown": [
+       "165237"
+      ],
+      "text/plain": [
+       "[1] 165237"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "length( vector_enviar)"
    ]
@@ -210,9 +462,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -222,20 +477,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 6 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>numero_de_cliente</th><th scope=col>Predicted</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>31116053</td><td>1</td></tr>\n",
+       "\t<tr><td>31116803</td><td>1</td></tr>\n",
+       "\t<tr><td>31117730</td><td>1</td></tr>\n",
+       "\t<tr><td>31117908</td><td>1</td></tr>\n",
+       "\t<tr><td>31117977</td><td>1</td></tr>\n",
+       "\t<tr><td>31120119</td><td>1</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 6 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " numero\\_de\\_cliente & Predicted\\\\\n",
+       " <int> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 31116053 & 1\\\\\n",
+       "\t 31116803 & 1\\\\\n",
+       "\t 31117730 & 1\\\\\n",
+       "\t 31117908 & 1\\\\\n",
+       "\t 31117977 & 1\\\\\n",
+       "\t 31120119 & 1\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 6 × 2\n",
+       "\n",
+       "| numero_de_cliente &lt;int&gt; | Predicted &lt;dbl&gt; |\n",
+       "|---|---|\n",
+       "| 31116053 | 1 |\n",
+       "| 31116803 | 1 |\n",
+       "| 31117730 | 1 |\n",
+       "| 31117908 | 1 |\n",
+       "| 31117977 | 1 |\n",
+       "| 31120119 | 1 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  numero_de_cliente Predicted\n",
+       "1 31116053          1        \n",
+       "2 31116803          1        \n",
+       "3 31117730          1        \n",
+       "4 31117908          1        \n",
+       "5 31117977          1        \n",
+       "6 31120119          1        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "head( tabla_final)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -338,7 +660,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.2.2"
   }
  },
  "nbformat": 4,
