--- a/src/zero2hero/zero2hero_0109.ipynb
+++ b/src/zero2hero/zero2hero_0109.ipynb
@@ -26,11 +26,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 2 × 6 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 614699</td><td>32.9</td><td>1321401</td><td>70.6</td><td>1321401</td><td>70.6</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1093594</td><td> 8.4</td><td>8388608</td><td>64.0</td><td>1632451</td><td>12.5</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 2 × 6 of type dbl\n",
+       "\\begin{tabular}{r|llllll}\n",
+       "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
+       "\\hline\n",
+       "\tNcells &  614699 & 32.9 & 1321401 & 70.6 & 1321401 & 70.6\\\\\n",
+       "\tVcells & 1093594 &  8.4 & 8388608 & 64.0 & 1632451 & 12.5\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 2 × 6 of type dbl\n",
+       "\n",
+       "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| Ncells |  614699 | 32.9 | 1321401 | 70.6 | 1321401 | 70.6 |\n",
+       "| Vcells | 1093594 |  8.4 | 8388608 | 64.0 | 1632451 | 12.5 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
+       "Ncells  614699 32.9 1321401    70.6 1321401  70.6\n",
+       "Vcells 1093594  8.4 8388608    64.0 1632451  12.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'data.table' was built under R version 4.2.3\"\n",
+      "Warning message:\n",
+      "\"package 'rpart' was built under R version 4.2.3\"\n",
+      "Warning message:\n",
+      "\"package 'rpart.plot' was built under R version 4.2.3\"\n"
+     ]
+    }
+   ],
    "source": [
     "rm( list=ls())\n",
     "gc()\n",
@@ -40,14 +98,17 @@
     "library( \"rpart.plot\")\n",
     "\n",
     "options(repr.plot.width=20, repr.plot.height=10) \n",
-    "setwd(\"X:\\\\gdrive\\\\austral2023v\\\\\")  #Aqui se debe poner la ruta de la PC local"
+    "setwd(\".\\\\\")  #Aqui se debe poner la ruta de la PC local"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -57,11 +118,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'caret' was built under R version 4.2.3\"\n",
+      "Loading required package: ggplot2\n",
+      "\n",
+      "Loading required package: lattice\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(\"caret\")"
    ]
@@ -82,9 +159,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -100,11 +180,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 6 × 1 of type int</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Resample1</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 4</td></tr>\n",
+       "\t<tr><td>10</td></tr>\n",
+       "\t<tr><td>12</td></tr>\n",
+       "\t<tr><td>14</td></tr>\n",
+       "\t<tr><td>18</td></tr>\n",
+       "\t<tr><td>20</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 6 × 1 of type int\n",
+       "\\begin{tabular}{l}\n",
+       " Resample1\\\\\n",
+       "\\hline\n",
+       "\t  4\\\\\n",
+       "\t 10\\\\\n",
+       "\t 12\\\\\n",
+       "\t 14\\\\\n",
+       "\t 18\\\\\n",
+       "\t 20\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 6 × 1 of type int\n",
+       "\n",
+       "| Resample1 |\n",
+       "|---|\n",
+       "|  4 |\n",
+       "| 10 |\n",
+       "| 12 |\n",
+       "| 14 |\n",
+       "| 18 |\n",
+       "| 20 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     Resample1\n",
+       "[1,]  4       \n",
+       "[2,] 10       \n",
+       "[3,] 12       \n",
+       "[4,] 14       \n",
+       "[5,] 18       \n",
+       "[6,] 20       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "head( train_rows )"
    ]
@@ -125,9 +267,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -143,9 +288,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -161,11 +309,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "82341"
+      ],
+      "text/latex": [
+       "82341"
+      ],
+      "text/markdown": [
+       "82341"
+      ],
+      "text/plain": [
+       "[1] 82341"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "82341"
+      ],
+      "text/latex": [
+       "82341"
+      ],
+      "text/markdown": [
+       "82341"
+      ],
+      "text/plain": [
+       "[1] 82341"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "164682"
+      ],
+      "text/latex": [
+       "164682"
+      ],
+      "text/markdown": [
+       "164682"
+      ],
+      "text/plain": [
+       "[1] 164682"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "164682"
+      ],
+      "text/latex": [
+       "164682"
+      ],
+      "text/markdown": [
+       "164682"
+      ],
+      "text/plain": [
+       "[1] 164682"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "nrow( dtrain)\n",
     "nrow( dtest )\n",
@@ -182,11 +406,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "r"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 3 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>clase_ternaria</th><th scope=col>N</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>CONTINUA</td><td>162336</td></tr>\n",
+       "\t<tr><td>BAJA+1  </td><td>  1078</td></tr>\n",
+       "\t<tr><td>BAJA+2  </td><td>  1268</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 3 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " clase\\_ternaria & N\\\\\n",
+       " <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t CONTINUA & 162336\\\\\n",
+       "\t BAJA+1   &   1078\\\\\n",
+       "\t BAJA+2   &   1268\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 3 × 2\n",
+       "\n",
+       "| clase_ternaria &lt;chr&gt; | N &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| CONTINUA | 162336 |\n",
+       "| BAJA+1   |   1078 |\n",
+       "| BAJA+2   |   1268 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  clase_ternaria N     \n",
+       "1 CONTINUA       162336\n",
+       "2 BAJA+1           1078\n",
+       "3 BAJA+2           1268"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 3 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>clase_ternaria</th><th scope=col>N</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>CONTINUA</td><td>81168</td></tr>\n",
+       "\t<tr><td>BAJA+2  </td><td>  634</td></tr>\n",
+       "\t<tr><td>BAJA+1  </td><td>  539</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 3 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " clase\\_ternaria & N\\\\\n",
+       " <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t CONTINUA & 81168\\\\\n",
+       "\t BAJA+2   &   634\\\\\n",
+       "\t BAJA+1   &   539\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 3 × 2\n",
+       "\n",
+       "| clase_ternaria &lt;chr&gt; | N &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| CONTINUA | 81168 |\n",
+       "| BAJA+2   |   634 |\n",
+       "| BAJA+1   |   539 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  clase_ternaria N    \n",
+       "1 CONTINUA       81168\n",
+       "2 BAJA+2           634\n",
+       "3 BAJA+1           539"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 3 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>clase_ternaria</th><th scope=col>N</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>CONTINUA</td><td>81168</td></tr>\n",
+       "\t<tr><td>BAJA+1  </td><td>  539</td></tr>\n",
+       "\t<tr><td>BAJA+2  </td><td>  634</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 3 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " clase\\_ternaria & N\\\\\n",
+       " <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t CONTINUA & 81168\\\\\n",
+       "\t BAJA+1   &   539\\\\\n",
+       "\t BAJA+2   &   634\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 3 × 2\n",
+       "\n",
+       "| clase_ternaria &lt;chr&gt; | N &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| CONTINUA | 81168 |\n",
+       "| BAJA+1   |   539 |\n",
+       "| BAJA+2   |   634 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  clase_ternaria N    \n",
+       "1 CONTINUA       81168\n",
+       "2 BAJA+1           539\n",
+       "3 BAJA+2           634"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "djulio[  , .N, clase_ternaria]\n",
     "dtrain[  , .N, clase_ternaria]\n",
@@ -213,7 +585,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.2.2"
   }
  },
  "nbformat": 4,
