correcciones de path y un par de comments

--- a/src/zero2hero/zero2hero_0111.ipynb
+++ b/src/zero2hero/zero2hero_0111.ipynb
@@ -40,8 +40,8 @@
        "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>Ncells</th><td> 614733</td><td>32.9</td><td>1321401</td><td>70.6</td><td>1321401</td><td>70.6</td></tr>\n",
-       "\t<tr><th scope=row>Vcells</th><td>1093659</td><td> 8.4</td><td>8388608</td><td>64.0</td><td>1632451</td><td>12.5</td></tr>\n",
+       "\t<tr><th scope=row>Ncells</th><td> 614739</td><td>32.9</td><td>1321401</td><td>70.6</td><td>1321401</td><td>70.6</td></tr>\n",
+       "\t<tr><th scope=row>Vcells</th><td>1093673</td><td> 8.4</td><td>8388608</td><td>64.0</td><td>1632451</td><td>12.5</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -50,8 +50,8 @@
        "\\begin{tabular}{r|llllll}\n",
        "  & used & (Mb) & gc trigger & (Mb) & max used & (Mb)\\\\\n",
        "\\hline\n",
-       "\tNcells &  614733 & 32.9 & 1321401 & 70.6 & 1321401 & 70.6\\\\\n",
-       "\tVcells & 1093659 &  8.4 & 8388608 & 64.0 & 1632451 & 12.5\\\\\n",
+       "\tNcells &  614739 & 32.9 & 1321401 & 70.6 & 1321401 & 70.6\\\\\n",
+       "\tVcells & 1093673 &  8.4 & 8388608 & 64.0 & 1632451 & 12.5\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -60,14 +60,14 @@
        "\n",
        "| <!--/--> | used | (Mb) | gc trigger | (Mb) | max used | (Mb) |\n",
        "|---|---|---|---|---|---|---|\n",
-       "| Ncells |  614733 | 32.9 | 1321401 | 70.6 | 1321401 | 70.6 |\n",
-       "| Vcells | 1093659 |  8.4 | 8388608 | 64.0 | 1632451 | 12.5 |\n",
+       "| Ncells |  614739 | 32.9 | 1321401 | 70.6 | 1321401 | 70.6 |\n",
+       "| Vcells | 1093673 |  8.4 | 8388608 | 64.0 | 1632451 | 12.5 |\n",
        "\n"
       ],
       "text/plain": [
        "       used    (Mb) gc trigger (Mb) max used (Mb)\n",
-       "Ncells  614733 32.9 1321401    70.6 1321401  70.6\n",
-       "Vcells 1093659  8.4 8388608    64.0 1632451  12.5"
+       "Ncells  614739 32.9 1321401    70.6 1321401  70.6\n",
+       "Vcells 1093673  8.4 8388608    64.0 1632451  12.5"
       ]
      },
      "metadata": {},
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -301,7 +301,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in eval(expr, envir, enclos): object 'sarasa' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in eval(expr, envir, enclos): object 'sarasa' not found\nTraceback:\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -315,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -357,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "tags": [],
     "vscode": {
@@ -371,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "tags": [],
     "vscode": {
