--- a/src/rpart/z211_traintest_estratificado.ipynb
+++ b/src/rpart/z211_traintest_estratificado.ipynb
@@ -211,7 +211,7 @@
    "source": [
     "cat(\"Modelo Bloque: \", unlist(a[1]), \"\\n\")\n",
     "cat(\"Bloque Repetido: \", unlist(unlist(a[2])[1:40]), \"...\\n\")\n",
-    "cat(\"Bloque Repetido: \", unlist(unlist(a[3])[1:40]), \"...\\n\")"
+    "cat(\"Sample: \", unlist(unlist(a[3])[1:40]), \"...\\n\")"
    ]
   },
   {
@@ -327,13 +327,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing total:  49405 \n",
+      "Testing BAJA+2:  381 \n",
+      "Estimulos:  3331 \n",
+      "Aciertos (BAJA+2):  210 \n",
+      "Ganancia en testing (normalizada):  50690000 \n"
+     ]
+    }
+   ],
    "source": [
     "cat( \"Testing total: \",  dataset[ fold==2, .N ], \"\\n\" )\n",
     "cat( \"Testing BAJA+2: \", dataset[ fold==2 & clase_ternaria ==\"BAJA+2\", .N ], \"\\n\" )\n",
